<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DWWebView</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="action_home">Home</string>
    <string name="action_back">Back</string>
    <string name="action_forward">Forward</string>
    <string name="hello_world">Hello world!</string>

</resources>
