<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>

    <item
        android:id="@+id/action_back"
        android:orderInCategory="200"
        android:showAsAction="never"
        android:onClick="backClick"
        android:title="@string/action_back"/>

    <item
        android:id="@+id/action_forward"
        android:orderInCategory="300"
        android:showAsAction="never"
        android:onClick="forwardClick"
        android:title="@string/action_forward"/>

    <item
        android:id="@+id/action_home"
        android:orderInCategory="400"
        android:showAsAction="never"
        android:onClick="resetClick"
        android:title="@string/action_home"/>

    <item
        android:id="@+id/action_logout"
        android:orderInCategory="500"
        android:showAsAction="never"
        android:onClick="logoutClick"
        android:title="@string/action_logout"/>

</menu>
